--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+  - jekyll-remote-theme
 title: Steven's Github page
 description: Making things for reasons
